{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 1,
  "lineage": "samoyed-corp-mesh-demo",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "vpc-dmz001",
            "cidr_block": "10.0.0.0/16",
            "owner_id": "111111111111",
            "tags": {
              "Name": "dmz"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "vpc-app001",
            "cidr_block": "10.10.0.0/16",
            "owner_id": "111111111111",
            "tags": {
              "Name": "app"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "vpc-pci001",
            "cidr_block": "10.20.0.0/16",
            "owner_id": "111111111111",
            "tags": {
              "Name": "pci"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "vpc-shared001",
            "cidr_block": "10.30.0.0/16",
            "owner_id": "222222222222",
            "tags": {
              "Name": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "vpc-staging001",
            "cidr_block": "10.40.0.0/16",
            "owner_id": "333333333333",
            "tags": {
              "Name": "staging"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dmz_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-dmzalb",
            "vpc_id": "vpc-dmz001",
            "owner_id": "111111111111",
            "name": "dmz_alb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp"
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 80,
                "to_port": 80,
                "protocol": "tcp"
              }
            ],
            "tags": {
              "Name": "dmz_alb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dmz_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-dmzbastion",
            "vpc_id": "vpc-dmz001",
            "owner_id": "111111111111",
            "name": "dmz_bastion",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 22,
                "to_port": 22,
                "protocol": "tcp"
              }
            ],
            "tags": {
              "Name": "dmz_bastion"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dmz_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-dmzweb",
            "vpc_id": "vpc-dmz001",
            "owner_id": "111111111111",
            "name": "dmz_web",
            "ingress": [
              {
                "cidr_blocks": [],
                "ipv6_cidr_blocks": [],
                "security_groups": [
                  "sg-dmzalb"
                ],
                "self": false,
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp"
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1"
              }
            ],
            "tags": {
              "Name": "dmz_web"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-appalb",
            "vpc_id": "vpc-app001",
            "owner_id": "111111111111",
            "name": "app_alb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp"
              }
            ],
            "tags": {
              "Name": "app_alb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-appsvc",
            "vpc_id": "vpc-app001",
            "owner_id": "111111111111",
            "name": "app_svc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16",
                  "10.0.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1"
              },
              {
                "cidr_blocks": [],
                "ipv6_cidr_blocks": [],
                "security_groups": [
                  "sg-appalb"
                ],
                "self": false,
                "from_port": 8080,
                "to_port": 8080,
                "protocol": "tcp"
              }
            ],
            "tags": {
              "Name": "app_svc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pci_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-pcidata",
            "vpc_id": "vpc-pci001",
            "owner_id": "111111111111",
            "name": "pci_data",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 5432,
                "to_port": 5432,
                "protocol": "tcp"
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1"
              }
            ],
            "tags": {
              "Name": "pci_data"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shared_cicd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-sharedcicd",
            "vpc_id": "vpc-shared001",
            "owner_id": "222222222222",
            "name": "shared_cicd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1"
              },
              {
                "cidr_blocks": [
                  "10.30.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1"
              }
            ],
            "tags": {
              "Name": "shared_cicd"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "staging_open",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-stagingopen",
            "vpc_id": "vpc-staging001",
            "owner_id": "333333333333",
            "name": "staging_open",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.40.0.0/16"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 0,
                "to_port": 0,
                "protocol": "-1"
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "ipv6_cidr_blocks": [],
                "security_groups": [],
                "self": false,
                "from_port": 443,
                "to_port": 443,
                "protocol": "tcp"
              }
            ],
            "tags": {
              "Name": "staging_open"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "dmz_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "pcx-dmzapp",
            "vpc_id": "vpc-dmz001",
            "peer_vpc_id": "vpc-app001",
            "owner_id": "111111111111",
            "peer_owner_id": "111111111111",
            "accept_status": "active",
            "requester": {
              "vpc_id": "vpc-dmz001",
              "owner_id": "111111111111",
              "cidr_block": "10.0.0.0/16"
            },
            "accepter": {
              "vpc_id": "vpc-app001",
              "owner_id": "111111111111",
              "cidr_block": "10.10.0.0/16"
            },
            "tags": {
              "Name": "dmz_to_app"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_to_pci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "pcx-apppci",
            "vpc_id": "vpc-app001",
            "peer_vpc_id": "vpc-pci001",
            "owner_id": "111111111111",
            "peer_owner_id": "111111111111",
            "accept_status": "active",
            "requester": {
              "vpc_id": "vpc-app001",
              "owner_id": "111111111111",
              "cidr_block": "10.10.0.0/16"
            },
            "accepter": {
              "vpc_id": "vpc-pci001",
              "owner_id": "111111111111",
              "cidr_block": "10.20.0.0/16"
            },
            "tags": {
              "Name": "app_to_pci"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_to_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "pcx-appshared",
            "vpc_id": "vpc-app001",
            "peer_vpc_id": "vpc-shared001",
            "owner_id": "111111111111",
            "peer_owner_id": "222222222222",
            "accept_status": "active",
            "requester": {
              "vpc_id": "vpc-app001",
              "owner_id": "111111111111",
              "cidr_block": "10.10.0.0/16"
            },
            "accepter": {
              "vpc_id": "vpc-shared001",
              "owner_id": "222222222222",
              "cidr_block": "10.30.0.0/16"
            },
            "tags": {
              "Name": "app_to_shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "dmz_to_staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "pcx-dmzstaging",
            "vpc_id": "vpc-dmz001",
            "peer_vpc_id": "vpc-staging001",
            "owner_id": "111111111111",
            "peer_owner_id": "333333333333",
            "accept_status": "active",
            "requester": {
              "vpc_id": "vpc-dmz001",
              "owner_id": "111111111111",
              "cidr_block": "10.0.0.0/16"
            },
            "accepter": {
              "vpc_id": "vpc-staging001",
              "owner_id": "333333333333",
              "cidr_block": "10.40.0.0/16"
            },
            "tags": {
              "Name": "dmz_to_staging"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "corp_public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-public-alb/aaaaaaaaaaaaaaaa",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-public-alb/aaaaaaaaaaaaaaaa",
            "name": "corp-public-alb",
            "vpc_id": "vpc-dmz001",
            "security_groups": [
              "sg-dmzalb"
            ],
            "subnets": [
              "subnet-dmz1",
              "subnet-dmz2"
            ],
            "scheme": "internet-facing",
            "internal": false,
            "dns_name": "corp-public-alb-123.us-east-1.elb.amazonaws.com",
            "owner_id": "111111111111",
            "tags": {
              "Name": "corp-public-alb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "corp_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb",
            "arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb",
            "name": "corp-app-alb",
            "vpc_id": "vpc-app001",
            "security_groups": [
              "sg-appalb"
            ],
            "subnets": [
              "subnet-app1",
              "subnet-app2"
            ],
            "scheme": "internal",
            "internal": true,
            "dns_name": "internal-corp-app-alb-456.us-east-1.elb.amazonaws.com",
            "owner_id": "111111111111",
            "tags": {
              "Name": "corp-app-alb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-dmzbastion01",
            "vpc_id": "vpc-dmz001",
            "subnet_id": "subnet-dmz1",
            "private_ip": "10.0.1.10",
            "vpc_security_group_ids": [
              "sg-dmzbastion"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "bastion",
              "samoyed_caller": "true",
              "tier": "dmz"
            },
            "instance_state": "running",
            "public_ip": "203.0.113.10",
            "iam_instance_profile": "bastion-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-dmzweb01",
            "vpc_id": "vpc-dmz001",
            "subnet_id": "subnet-dmz1",
            "private_ip": "10.0.2.11",
            "vpc_security_group_ids": [
              "sg-dmzweb"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "web-1",
              "tier": "dmz"
            },
            "instance_state": "running",
            "iam_instance_profile": "web-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-dmzweb02",
            "vpc_id": "vpc-dmz001",
            "subnet_id": "subnet-dmz2",
            "private_ip": "10.0.2.12",
            "vpc_security_group_ids": [
              "sg-dmzweb"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "web-2",
              "tier": "dmz"
            },
            "instance_state": "running",
            "iam_instance_profile": "web-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edge_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-dmzproxy01",
            "vpc_id": "vpc-dmz001",
            "subnet_id": "subnet-dmz1",
            "private_ip": "10.0.3.15",
            "vpc_security_group_ids": [
              "sg-dmzweb"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "edge-proxy",
              "tier": "dmz"
            },
            "instance_state": "running",
            "public_ip": "203.0.113.15",
            "iam_instance_profile": "web-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_api_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-appapi01",
            "vpc_id": "vpc-app001",
            "subnet_id": "subnet-app1",
            "private_ip": "10.10.1.21",
            "vpc_security_group_ids": [
              "sg-appsvc"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "app-api-1",
              "tier": "app"
            },
            "instance_state": "running",
            "iam_instance_profile": "app-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_api_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-appapi02",
            "vpc_id": "vpc-app001",
            "subnet_id": "subnet-app1",
            "private_ip": "10.10.1.22",
            "vpc_security_group_ids": [
              "sg-appsvc"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "app-api-2",
              "tier": "app"
            },
            "instance_state": "running",
            "iam_instance_profile": "app-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_api_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-appapi03",
            "vpc_id": "vpc-app001",
            "subnet_id": "subnet-app2",
            "private_ip": "10.10.2.23",
            "vpc_security_group_ids": [
              "sg-appsvc"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "app-api-3",
              "tier": "app"
            },
            "instance_state": "running",
            "iam_instance_profile": "app-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-appworker01",
            "vpc_id": "vpc-app001",
            "subnet_id": "subnet-app2",
            "private_ip": "10.10.3.31",
            "vpc_security_group_ids": [
              "sg-appsvc"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "app-worker-1",
              "tier": "app"
            },
            "instance_state": "running",
            "iam_instance_profile": "app-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-appworker02",
            "vpc_id": "vpc-app001",
            "subnet_id": "subnet-app2",
            "private_ip": "10.10.3.32",
            "vpc_security_group_ids": [
              "sg-appsvc"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "app-worker-2",
              "tier": "app"
            },
            "instance_state": "running",
            "iam_instance_profile": "app-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pci_db_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-pcidb01",
            "vpc_id": "vpc-pci001",
            "subnet_id": "subnet-pci1",
            "private_ip": "10.20.1.40",
            "vpc_security_group_ids": [
              "sg-pcidata"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "pci-db-primary",
              "tier": "pci",
              "sensitivity": "pci"
            },
            "instance_state": "running"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pci_db_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-pcidb02",
            "vpc_id": "vpc-pci001",
            "subnet_id": "subnet-pci2",
            "private_ip": "10.20.2.41",
            "vpc_security_group_ids": [
              "sg-pcidata"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "pci-db-replica",
              "tier": "pci",
              "sensitivity": "pci"
            },
            "instance_state": "running"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pci_etl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-pcietl01",
            "vpc_id": "vpc-pci001",
            "subnet_id": "subnet-pci1",
            "private_ip": "10.20.1.50",
            "vpc_security_group_ids": [
              "sg-pcidata"
            ],
            "owner_id": "111111111111",
            "tags": {
              "Name": "pci-etl",
              "tier": "pci",
              "sensitivity": "pci"
            },
            "instance_state": "running",
            "iam_instance_profile": "pci-etl-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cicd_runner_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-cicdrun01",
            "vpc_id": "vpc-shared001",
            "subnet_id": "subnet-shared1",
            "private_ip": "10.30.1.60",
            "vpc_security_group_ids": [
              "sg-sharedcicd"
            ],
            "owner_id": "222222222222",
            "tags": {
              "Name": "cicd-runner-1",
              "tier": "cicd"
            },
            "instance_state": "running",
            "iam_instance_profile": "cicd-runner-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cicd_runner_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-cicdrun02",
            "vpc_id": "vpc-shared001",
            "subnet_id": "subnet-shared1",
            "private_ip": "10.30.1.61",
            "vpc_security_group_ids": [
              "sg-sharedcicd"
            ],
            "owner_id": "222222222222",
            "tags": {
              "Name": "cicd-runner-2",
              "tier": "cicd"
            },
            "instance_state": "running",
            "iam_instance_profile": "cicd-runner-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "log_aggregator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-sharedlog01",
            "vpc_id": "vpc-shared001",
            "subnet_id": "subnet-shared2",
            "private_ip": "10.30.2.70",
            "vpc_security_group_ids": [
              "sg-sharedcicd"
            ],
            "owner_id": "222222222222",
            "tags": {
              "Name": "log-aggregator",
              "tier": "shared"
            },
            "instance_state": "running"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "staging_canary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-stgcanary01",
            "vpc_id": "vpc-staging001",
            "subnet_id": "subnet-stg1",
            "private_ip": "10.40.1.80",
            "vpc_security_group_ids": [
              "sg-stagingopen"
            ],
            "owner_id": "333333333333",
            "tags": {
              "Name": "staging-canary",
              "tier": "staging"
            },
            "instance_state": "running",
            "public_ip": "203.0.113.80",
            "iam_instance_profile": "staging-canary-role-profile"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "staging_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-stgapi01",
            "vpc_id": "vpc-staging001",
            "subnet_id": "subnet-stg1",
            "private_ip": "10.40.1.81",
            "vpc_security_group_ids": [
              "sg-stagingopen"
            ],
            "owner_id": "333333333333",
            "tags": {
              "Name": "staging-api",
              "tier": "staging"
            },
            "instance_state": "running"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pub_to_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "target_id": "i-dmzweb01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-public-alb/aaaaaaaaaaaaaaaa",
            "port": 443,
            "tags": {
              "lb": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-public-alb/aaaaaaaaaaaaaaaa"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pub_to_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "target_id": "i-dmzweb02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-public-alb/aaaaaaaaaaaaaaaa",
            "port": 443,
            "tags": {
              "lb": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-public-alb/aaaaaaaaaaaaaaaa"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_to_api1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "target_id": "i-appapi01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb",
            "port": 443,
            "tags": {
              "lb": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_to_api2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "target_id": "i-appapi02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb",
            "port": 443,
            "tags": {
              "lb": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_to_api3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "target_id": "i-appapi03",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb",
            "port": 443,
            "tags": {
              "lb": "arn:aws:elasticloadbalancing:us-east-1:111111111111:loadbalancer/app/corp-app-alb/bbbbbbbbbbbbbbbb"
            }
          }
        }
      ]
    }
  ]
}